fix: add `z-index` in `CopyLink`

--- a/src/components/copy-link/copy-link.module.css
+++ b/src/components/copy-link/copy-link.module.css
@@ -21,6 +21,7 @@
 	left: 0;
 	right: 0;
 	pointer-events: none;
+	z-index: 10;
 }
 
 @keyframes fade {
